--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,4 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/Mproject0128.M_GameMode
+EditorStartupMap=/Game/Level/Level_BaseLevel.Level_BaseLevel
+GameDefaultMap=/Game/Level/Level_BaseLevel.Level_BaseLevel
 
