--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/Mproject0128.M_GameMode
+GlobalDefaultGameMode=/Script/Engine.GameMode
 EditorStartupMap=/Game/Level/Level_BaseLevel.Level_BaseLevel
 GameDefaultMap=/Game/Level/Level_BaseLevel.Level_BaseLevel
 
